--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.8.0",
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
     "react-simple-typewriter": "^5.0.1",
